Dodanie endpointu /users/put w mainpage_ms.
